--- a/loan_types.html
+++ b/loan_types.html
@@ -62,7 +62,7 @@
       const name = document.getElementById('loan-name').value;
       const interestRate = document.getElementById('interest-rate').value;
 
-      fetch(']/ws/loan_types', {
+      fetch('/ws/loan_types', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ name: name, interest_rate: interestRate })
