--- a/fonds.html
+++ b/fonds.html
@@ -84,7 +84,7 @@
       const container = document.getElementById('liste-fonds');
       container.innerHTML = '<p>Chargement en cours...</p>';
       
-      fetch('/ws/fonds')
+      fetch('/Final_S4/ws/fonds')
         .then(response => {
           if (!response.ok) throw new Error('Erreur réseau');
           return response.json();
