--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="loan_types.html">Gestion des types de prêt</a></li>
         <li><a href="client_loans.html">Gestion des prêts clients</a></li>
         <li><a href="interest_earned.html">Intérêts gagnés</a></li>
+        <li><a href="simulation_pret.html">Simulation de prêt</a></li>
       </ul>
     </nav>
   </header>
