--- a/amortissement.html
+++ b/amortissement.html
@@ -21,6 +21,7 @@
         <li><a href="client_loans.html">Gestion des prêts clients</a></li>
         <li><a href="monthly_interests.html">Intérêts mensuels</a></li>
         <li><a href="amortissement.html">Simulation d'amortissement</a></li>
+        <li><a href="simulation_pret.html">Simulation de prêts</a></li>
       </ul>
     </nav>
   </header>
