--- a/monthly_interests.html
+++ b/monthly_interests.html
@@ -17,7 +17,9 @@
                 <li><a href="loan_types.html">Gestion des types de prêt</a></li>
                 <li><a href="client_loans.html">Gestion des prêts clients</a></li>
                 <li><a href="monthly_interests.html">Intérêts mensuels</a></li>
-            </ul>
+                <li><a href="amortissement.html">Simulation d'amortissement</a></li>
+                <li><a href="simulation_pret.html">Simulation de prêts</a></li>
+              </ul>
         </nav>
     </header>
 
