--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <li><a href="fonds.html">Gestion des fonds</a></li>
         <li><a href="loan_types.html">Gestion des types de prêt</a></li>
         <li><a href="client_loans.html">Gestion des prêts clients</a></li>
-        <li><a href="interest_earned.html">Intérêts gagnés</a></li>
-        <li><a href="simulation_pret.html">Simulation de prêt</a></li>
+        <li><a href="monthly_interests.html">Intérêts mensuels</a></li>
+        <li><a href="amortissement.html">Simulation d'amortissement</a></li>
+        <li><a href="simulation_pret.html">Simulation de prêts</a></li>
       </ul>
     </nav>
   </header>
@@ -32,6 +33,7 @@
             <a href="fonds.html" class="btn btn-primary">Gestion des fonds</a>
             <a href="loan_types.html" class="btn btn-primary">Types de prêt</a>
             <a href="client_loans.html" class="btn btn-primary">Prêts clients</a>
+            <li><a href="simulation_pret.html">Simulation de prêts</a></li>
           </div>
         </div>
       </div>
