--- a/fonds.html
+++ b/fonds.html
@@ -14,7 +14,9 @@
         <li><a href="fonds.html">Gestion des fonds</a></li>
         <li><a href="loan_types.html">Gestion des types de prêt</a></li>
         <li><a href="client_loans.html">Gestion des prêts clients</a></li>
-        <li><a href="interest_earned.html">Intérêts gagnés</a></li>
+        <li><a href="monthly_interests.html">Intérêts mensuels</a></li>
+        <li><a href="amortissement.html">Simulation d'amortissement</a></li>
+        <li><a href="simulation_pret.html">Simulation de prêts</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +38,7 @@
             
             <div class="form-group">
               <label for="valeur">Montant (Ar)</label>
-              <input type="number" id="valeur" step="0.01" min="0" required>
+              <input type="number" id="valeur" step="1" min="0" required>
             </div>
           </div>
           
