--- a/interest_earned.html
+++ b/interest_earned.html
@@ -98,7 +98,7 @@
       const resultsContainer = document.getElementById('results');
       resultsContainer.innerHTML = '<p>Recherche en cours...</p>';
       
-      fetch(`/ws/interest_earned?start=${startMonth}-01&end=${endMonth}-31`)
+      fetch(`/Final_S4/ws/interest_earned?start=${startMonth}-01&end=${endMonth}-31`)
         .then(response => {
           if (!response.ok) throw new Error('Erreur lors de la recherche');
           return response.json();
@@ -124,7 +124,7 @@
             html += `
               <tr>
                 <td>${row.month}</td>
-                <td>${parseFloat(row.interest_earned).toFixed(2)} €</td>
+                <td>${parseFloat(row.interest_earned).toFixed(0)} Ar</td>
               </tr>
             `;
           });
